@@ -29,6 +29,8 @@ var (
 			"connected":           c.Int("connected_clients"),
 			"longest_output_list": c.Int("client_longest_output_list"),
 			"biggest_input_buf":   c.Int("client_biggest_input_buf"),
+			"max_output_buffer":   c.Int("client_recent_max_output_buffer"),
+			"max_input_buffer":    c.Int("client_recent_max_input_buffer"),
 			"blocked":             c.Int("blocked_clients"),
 		},
 		"cluster": s.Object{
